--- a/index.html
+++ b/index.html
@@ -16,49 +16,66 @@
         <form action="">
           <ul>
             <li>
-              <label for="">
-                <input type="checkbox" name="" id="" />
+              <label>
+                <input type="checkbox" />
                 <p>
-                  A lot of pickles <span>for the next lessons about CSS</span>
+                  <span>A lot of pickles </span
+                  ><span>for the next lessons about CSS</span>
                 </p>
               </label>
             </li>
+
             <li>
-              <label for="">
-                <input type="checkbox" name="" id="" />
-                <p>10 apples <span>for more CSS manipulations</span></p>
+              <label>
+                <input type="checkbox" />
+                <p>
+                  <span>10 apples </span><span>for more CSS manipulations</span>
+                </p>
               </label>
             </li>
+
             <li>
-              <label for="">
-                <input type="checkbox" name="" id="" />
-                <p>20 oranges <span>because they are awesome</span></p>
+              <label>
+                <input type="checkbox" />
+                <p>
+                  <span>20 oranges </span><span>because they are awesome</span>
+                </p>
               </label>
             </li>
+
             <li>
-              <label for="">
-                <input type="checkbox" name="" id="" />
-                <p>13 plates <span>hm... they always dissapear</span></p>
+              <label>
+                <input type="checkbox" />
+                <p>
+                  <span>13 plates </span
+                  ><span>hm... they always dissapear</span>
+                </p>
               </label>
             </li>
+
             <li>
-              <label for="">
-                <input type="checkbox" name="" id="" />
-                <p>15 bentos <span>for the next lessons about CSS</span></p>
+              <label>
+                <input type="checkbox" />
+                <p>
+                  <span>15 bentos </span
+                  ><span>for the next lessons about CSS</span>
+                </p>
               </label>
             </li>
+
             <li>
-              <label for="">
-                <input type="checkbox" name="" id="" />
-                <p>1 bottle of Sake <span>for my friends</span></p>
+              <label>
+                <input type="checkbox" />
+                <p><span>1 bottle of Sake </span><span>for my friends</span></p>
               </label>
             </li>
           </ul>
         </form>
 
-        <div class="footer">
-          <button type="submit">Bon appetit :)</button>
-        </div>
+        <footer>
+      <p>Bon appetit :)</p>
+    </footer>
+  </div>
       </main>
     </div>
   </body>
